--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   mpd:
-    image: woahbase/alpine-mpd:latest
+    build: .
     container_name: mpd
     user: "${UID:-1000}:${GID:-1000}"
     ports:
@@ -10,6 +10,6 @@ services:
     volumes:
       - ./music:/music:ro
       - ./playlists:/playlists
-      - ./data:/data
-      - ./config/mpd.conf:/etc/mpd.conf:ro
+      - ./data:/var/lib/mpd
+      - ./mpd.conf:/etc/mpd.conf:ro
     restart: unless-stopped
