--- a/config/mpd.conf
+++ b/config/mpd.conf
@@ -2,18 +2,16 @@ music_directory "/music"
 playlist_directory "/playlists"
 db_file "/var/lib/mpd/mpd.db"
 log_file "/var/lib/mpd/mpd.log"
-pid_file "/run/mpd/mpd.pid"
+pid_file "/run/mpd.pid"
 
 port "6600"
 bind_to_address "any"
 
 audio_output {
     type "httpd"
-    name "Main Stream"
+    name "Stream"
     encoder "vorbis"
     port "8000"
     quality "5.0"
     format "44100:16:2"
 }
-
-zeroconf_enabled "no"
