--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,13 +3,12 @@ services:
   mpd:
     build: .
     container_name: mpd
-    user: "${UID:-1000}:${GID:-1000}"
     ports:
       - "6600:6600"
       - "8000:8000"
     volumes:
       - ./music:/music:ro
       - ./playlists:/playlists
-      - ./data:/var/lib/mpd
+      - .//var/lib/mpd
       - ./mpd.conf:/etc/mpd.conf:ro
-    restart: unless-stopped
+    restart: always
