--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,8 @@ services:
       - "6600:6600"
       - "8000:8000"
     volumes:
-      - ./music:/music:ro
+      - ./music:/music
       - ./playlists:/playlists
       - ./:/var/lib/mpd
-      - ./mpd.conf:/etc/mpd.conf:ro
+      - ./mpd.conf:/etc/mpd.conf
     restart: always
