--- a/config/mpd.conf
+++ b/config/mpd.conf
@@ -5,12 +5,13 @@ log_file "/var/lib/mpd/mpd.log"
 pid_file "/run/mpd.pid"
 
 port "6600"
-bind_to_address "any"
+bind_to_address "0.0.0.0"
 
 audio_output {
     type "httpd"
     name "Stream"
     encoder "vorbis"
+    bind_to_address "0.0.0.0"
     port "8000"
     quality "5.0"
     format "44100:16:2"
